<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<HorizontalScrollView
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:scrollbars="none"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="10dp"
        app:singleSelection="true"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all_transactions"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/chip_text_color"
            app:chipBackgroundColor="@drawable/chip_background"
            android:text="@string/all_transactions"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ten_days"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            tools:checked="true"
            android:textColor="@drawable/chip_text_color"
            app:chipBackgroundColor="@drawable/chip_background"
            android:layout_height="wrap_content"
            android:text="@string/ten_days"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_thirty_days"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/chip_text_color"
            app:chipBackgroundColor="@drawable/chip_background"
            android:text="@string/thirty_days"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sixty_days"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/chip_text_color"
            app:chipBackgroundColor="@drawable/chip_background"
            android:text="@string/sixty_days"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ninety_days"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/chip_text_color"
            app:chipBackgroundColor="@drawable/chip_background"
            android:text="@string/ninety_days"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_six_months"
            style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/chip_text_color"
            app:chipBackgroundColor="@drawable/chip_background"
            android:text="@string/six_months"/>

    </com.google.android.material.chip.ChipGroup>

</HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>