<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="#ffee32">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/warning"
        android:id="@+id/iv_warning_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_warning"
        app:tint="@color/holo_red_light"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:id="@+id/tv_spending_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_close"
        app:layout_constraintStart_toEndOf="@id/iv_warning_icon"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/spending_warning"
        />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_margin="3dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:padding="2dp"
        android:src="@drawable/ic_close"
        app:tint="@color/blue_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/close" />


</androidx.constraintlayout.widget.ConstraintLayout>